--- a/src/scss/base/forms/forms.scss
+++ b/src/scss/base/forms/forms.scss
@@ -38,7 +38,7 @@
 
 // <RATING>
 // Сніппет (HTML): rating
-// @import "rating";
+@import "rating";
 
 // <QUANTITY>
 // Сніппет (HTML): qa
@@ -46,7 +46,7 @@
 
 // <RANGE>
 // Сніппет (HTML):
-// @import "range";
+@import "range";
 
 // <CALENDAR>
 // Сніппет (HTML):
