--- a/src/scss/base/spollers.scss
+++ b/src/scss/base/spollers.scss
@@ -28,27 +28,46 @@
 		cursor: pointer;
 		&::before,
 		&::after {
-			content: "";
-			position: absolute;
-			right: 10px;
-			top: 50%;
-			background-color: #000;
-			height: 2px;
-			width: 15px;
-			transition: transform 0.5s ease 0s;
+			
 		}
 		&::before {
-			transform: translate(-75%, -50%) rotate(40deg);
+			content: '+';
+            color: #fff;
+            font-size: 50px;
+            font-style: normal;
+            font-family: "Jost",sans-serif;
+            font-weight: 300;
+            line-height: 1;
+			display: block;
+			text-align: center;
+            width: 80px;
+            height: 80px;
+			line-height: 72px;
+            border-radius: 50%;
+            background: #0A1537;
+
+			position: absolute;
+			right: 0;
+			top: 50%;
+			transform: translateY(-50%);
+			transition: all 0.4s ease;
+
+			@media (max-width:$mobile){
+				width: 45px;
+				height: 45px;
+				font-size: 24px;
+				line-height: 42px;
+			}
+
 		}
 		&::after {
-			transform: translate(0, -50%) rotate(-40deg);
 		}
 		&._spoller-active {
 			&::before {
-				transform: translateX(-75%) rotate(-40deg);
+				content: '--';
 			}
 			&::after {
-				transform: rotate(40deg);
+				
 			}
 		}
 		/*
@@ -85,6 +104,8 @@
 		}
 		*/
 	}
+
+	
 }
 // Контент спойлера
 .spollers__body {
