--- a/src/scss/base/menu.scss
+++ b/src/scss/base/menu.scss
@@ -9,31 +9,40 @@
 		padding: 6px 20px;
 
 
-		@media (max-width: $mobile) {
+		@media (max-width: 1542px) {
 			position: fixed;
 			width: 100%;
 			height: 100%;
-			left: -100%;
+			right: -100%;
 			top: 0;
 			overflow: auto;
-			padding: toRem(50) toRem(15) toRem(15) toRem(30);
-			transition: left 0.3s;
+			padding: toRem(100) toRem(15) toRem(15) toRem(30);
+			transition: right 0.3s;
+
 			&::before {
 				content: "";
 				position: fixed;
 				width: 100%;
 				height: toRem(70);
-				left: -100%;
+				right: -100%;
 				top: 0;
-				transition: left 0.3s;
+				transition: right 0.3s;
 				z-index: 2;
 			}
 			.menu-open & {
-				left: 0;
+				right: 0;
 				&::before {
-					left: 0;
+					right: 0;
 				}
 			}
+		}
+
+		@media (max-width:$mobile){
+			 width: 160px; 
+			 border-radius: 0;
+			 height: auto;
+			 padding: toRem(50) toRem(0) toRem(15) toRem(0);
+			 border-bottom-left-radius: 20px;
 		}
 	}
 	// .menu__list
@@ -43,12 +52,28 @@
 		gap: 30px;
 		
 
-		@media (max-width: $mobile) {
+		@media (max-width: 1542px) {
+			flex-direction: column;
+			align-items: flex-end;
+			gap: 0;
+		}
+
+		@media (max-width:$mobile){
+			align-items: flex-start; 
 		}
 	}
 	// .menu__item
 	&__item {
 		flex: 1 1 auto;
+		@media (max-width:$mobile){
+			border-bottom: 1px solid #A1A1A1;
+			padding: 5px 10px 5px 36px; 
+			width: 100%;
+
+			&:last-child {
+				border-bottom: none;
+			}
+		}
 	}
 	// .menu__link
 	&__link {
@@ -57,11 +82,37 @@
 		font-style: normal;
 		font-family: "Gilroy",sans-serif;
 		font-weight: 500;
+		position: relative;
+		transition: all 0.3s ease-in;
 
 		&.active {
 			background: #F9C98C;
 			padding: 8px 32px;
 		    border-radius: 20px;
+
+			@media (max-width:$mobile){
+				 padding: 0; 
+				 border-radius: 0;
+				 background: transparent;
+				 color: #F9C98C;
+			}
+		}
+
+		&::before {
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: -4px;
+			width: 0;
+			height: 1px;
+			background: #000;
+			transition: all 0.3s ease-in;
+		}
+
+		&:hover {
+			&::before {
+				width: 100%;
+			}
 		}
 
 
@@ -74,31 +125,42 @@
 //Burger Icon
 .icon-menu {
 	display: none;
-	@media (max-width: $mobile) {
+	@media (max-width: 1542px) {
 		display: block;
 		position: relative;
 		width: toRem(30);
 		height: toRem(18);
 		z-index: 5;
+		border-radius: 50%;
+
+		@media (max-width:$mobile){
+			width: toRem(20);
+			height: toRem(18);  
+		}
+
 		@media (any-hover: none) {
 			cursor: default;
 		}
+
 		span,
 		&::before,
 		&::after {
 			content: "";
 			transition: all 0.3s ease 0s;
-			right: 0;
+			left: 0;
 			position: absolute;
 			width: 100%;
 			height: toRem(2);
 			background-color: #000;
+			border-radius: 50%;
 		}
 		&::before {
 			top: 0;
+			width: 70%;
 		}
 		&::after {
 			bottom: 0;
+			width: 50%;
 		}
 		span {
 			top: calc(50% - toRem(1));
@@ -111,10 +173,12 @@
 			&::after {
 			}
 			&::before {
+				width: 100%;
 				top: calc(50% - toRem(1));
 				transform: rotate(-45deg);
 			}
 			&::after {
+				width: 100%;
 				bottom: calc(50% - toRem(1));
 				transform: rotate(45deg);
 			}
