--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -48,3 +48,13 @@
         font-weight: 500;
     }
 }
+
+.h1 {
+    color: #fff;
+    @include adaptiveValue("font-size", 96, 26);
+    font-style: normal;
+    font-family: "Gilroy",sans-serif;
+    font-weight: 400;
+    line-height: 0.95;
+    @include adaptiveValue("letter-spacing", -5, -2);
+}
