--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,12 +1,37 @@
 .header {
+    position: fixed;
+    left: 0;
+    top: 30px;
+    height: 54px;
+    z-index: 1000;
+    width: 100%;
+
+    @media (max-width: 1542px) {
+        padding: 0 16px;
+    }
+
+    @media (max-width:$mobile){
+        top: 20px;
+        height: 32px;
+    }
+
 
     // .header__container
-
     &__container {
         display: flex;
         align-items: center;
         justify-content: space-between;
         gap: 16px;
+
+        @media (max-width: 1542px) {
+            background: #FFF2E1;
+            padding: 8px 16px;
+            border-radius: 20px;
+        }
+
+        @media (max-width:$mobile){
+            padding: 4px 10px;  
+        }
     }
 
     // .header__logo
@@ -18,11 +43,26 @@
             height: auto;
             @include adaptiveValue("max-width", 120, 76);
         }
+
+        svg {
+            fill: #fff;
+            width: 100%;
+            height: auto;
+            @include adaptiveValue("max-width", 120, 76);
+
+            @media (max-width: 1542px) {
+                fill:#000000;
+                margin-bottom: -8px;
+            }
+        }
     }
 
     // .header__menu
 
     &__menu {
+        @media (max-width: 1542px) {
+            order: 2;
+        }
     }
 
     // .header__phone
@@ -37,9 +77,42 @@
         letter-spacing: -1px;
         text-transform: uppercase;
 
+        @media (max-width: 1542px) {
+            color: #000000;
+            display: flex;
+            align-items: center;
+            gap: 4px;
+            background: #F9C98C;
+            padding: 4px 10px;
+            border-radius: 20px;
+            margin-left: auto;
+        }
+
         @media (max-width:$mobile){
             font-family: "Jost",sans-serif;
             font-weight: 400;
+            padding: 2px 8px;
+        }
+
+        svg {
+            fill: #fff;
+            width: 20px;
+            height: 20px;
+            margin-bottom: -4px;
+
+            @media (max-width: 1542px) {
+                display: inline-block;
+                width: 18px;
+                height: 18px;
+                fill: #000000;
+                margin-bottom: -2px;
+            }
+
+            @media (max-width:$mobile){
+                width: 12px;
+                height: 12px;
+                margin-bottom: -1px; 
+            }
         }
     }
 }
