created blog section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -167,3 +167,7 @@ body {
 @import "projects";
 @import "hero";
 @import "calculator";
+@import "prices";
+@import "videoplayer";
+@import "design_prices";
+@import "blog";
