--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -64,7 +64,7 @@
         font-family: "Jost",sans-serif;
         font-weight: 400;
         line-height: 1.6;
-        padding-left: 22px;
+        padding-left: 1.4;
     }
 
     // .projects__list-item
