--- a/src/scss/consultation.scss
+++ b/src/scss/consultation.scss
@@ -11,7 +11,7 @@
     // .consultation__container
     &__container {
         display: flex;
-        max-width: 1740px;
+        max-width: 1300px;
 
         @media (max-width:$tablet){
             flex-direction: column;
@@ -137,8 +137,8 @@
     &__field-wrap {
         display: flex;
         flex-direction: column;
-        @include adaptiveValue("gap", 30, 14);
-        max-width: 720px;
+        @include adaptiveValue("gap", 20, 14);
+        max-width: 560px;
         margin: 0 auto;
     }
 
@@ -211,11 +211,7 @@
     &__illustration {
         background: #1E1E1E;
         border-radius: 40px 40px 40px 0;
-        padding: 50px 45px;
-
-        @media (max-width: 1240px){
-            padding: 30px 25px;
-        }
+        padding: 24px;
 
         @media (max-width:$tablet){
             border-radius: 0;
@@ -261,7 +257,7 @@
     // .form-success__heading
     &__heading {
         color: #fff;
-        @include adaptiveValue("font-size", 76, 26);
+        @include adaptiveValue("font-size", 62, 24);
         font-style: normal;
         text-align: center;
         font-family: "Gilroy",sans-serif;
