--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -405,3 +405,11 @@
         }
     }
 }
+
+
+.about-hero {
+
+    .hero__heading {
+        @include adaptiveValue("max-width", 500, 400);
+    }
+}
