--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -78,6 +78,7 @@
         letter-spacing: -1px;
         text-transform: uppercase;
         margin-left: auto;
+        transition: all 0.3s ease;
 
         @media (max-width: 1200px) {
             color: #000000;
@@ -101,6 +102,7 @@
             width: 20px;
             height: 20px;
             margin-bottom: -4px;
+            transition: all 0.3s ease;
 
             @media (max-width: 1200px) {
                 display: inline-block;
@@ -114,6 +116,14 @@
                 width: 12px;
                 height: 12px;
                 margin-bottom: -1px; 
+            }
+        }
+
+        &:hover {
+            color: #F9C98C;
+
+            svg {
+                fill: #F9C98C;
             }
         }
     }
