--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -8,7 +8,7 @@
     // .master__container
     &__container {
         display: flex;
-        gap: 60px;
+        gap: 26px;
         @media (max-width:$mobile){
              flex-direction: column;
              gap: 20px; 
@@ -17,7 +17,7 @@
 
     // .master__lef-col
     &__lef-col {
-        flex: 1 1 862px;
+        flex: 1 1 662px;
 
         @media (max-width:$mobile){
              flex: 1 1 auto; 
@@ -50,11 +50,17 @@
 
     // .master__right-col
     &__right-col {
-        flex: 1 1 680px;
+        flex: 1 1 512px;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 40px;
 
         @media (max-width:$mobile){
             flex: 1 1 auto; 
             text-align: right;
+            flex-direction: column-reverse;
+            gap: 20px;
        }
     }
 
@@ -62,11 +68,15 @@
     &__img {
         width: 100%;
         height: auto;
-        border-radius: 80px;
+        @include adaptiveValue("border-radius", 70, 22);
 
         @media (max-width:$mobile){
-             margin-bottom: 20px; 
-             border-radius: 22px;
+             max-height: 340px; 
+             object-fit: cover;
+        }
+
+        @media (max-width:$tablet){
+            max-height: 260px;
         }
     }
 }
