--- a/src/scss/our-services.scss
+++ b/src/scss/our-services.scss
@@ -12,7 +12,7 @@
         gap: 30px;
 
         @media (max-width:$mobile){
-            gap: 30px; 
+            gap: 20px; 
         }
     }
 
@@ -53,23 +53,23 @@
     // .our-services__row
     &__row {
         display: flex;
-        gap: 30px;
+        gap: 20px;
 
         &:nth-child(odd) {
             flex-direction: row-reverse;
         }
 
         @media (max-width:$mobile){
-             gap: 20px; 
+             gap: 14px; 
              flex-wrap: wrap;
         }
     }
 
     // .our-services__smal-col
     &__smal-col {
-        flex: 1 1 600px;
-        height: 400px;
-        border-radius: 40px 40px 40px 40px;
+        flex: 1 1 450px;
+        height: 300px;
+        border-radius: 30px;
         position: relative;
         overflow: hidden;
 
@@ -82,7 +82,7 @@
 
         @media (max-width:$mobile){
              flex: 1 1 100%; 
-             height: 350px;
+             height: 280px;
         }
 
         // .our-services__smal-col_link
@@ -94,8 +94,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 80px;
-            height: 80px;
+            width: 60px;
+            height: 60px;
             border-radius: 50%;
             background: #F9C98C;
             transition: all 0.3s ease;
@@ -139,8 +139,8 @@
     // .our-services__desc
     &__desc {
         backdrop-filter: blur(25px);
-        border-radius: 0 0 40px 40px;
-        min-height: 110px;
+        border-radius: 0 0 30px 30px;
+        min-height: 80px;
         width: 100%;
         padding: 16px 53px;
         display: flex;
@@ -156,7 +156,7 @@
     // .our-services__text
     &__text {
         color: #fff;
-        @include adaptiveValue("font-size", 38, 24);
+        @include adaptiveValue("font-size", 28, 20);
         font-style: normal;
         text-align: center;
         font-family: "Gilroy",sans-serif;
@@ -171,11 +171,11 @@
 
     // .our-services__big-col
     &__big-col {
-        flex: 1 1 970px;
-        border-radius: 40px 40px 40px 40px;
+        flex: 1 1 730px;
+        border-radius: 30px;
         position: relative;
         overflow: hidden;
-        height: 400px;
+        height: 300px;
 
         display: flex;
         align-items: end;
@@ -186,7 +186,7 @@
 
         @media (max-width:$mobile){
              flex: 1 1 100%; 
-             height: 350px;
+             height: 280px;
         }
 
         // .our-services__big-col_link
@@ -194,8 +194,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 80px;
-            height: 80px;
+            width: 60px;
+            height: 60px;
             border-radius: 50%;
             background: #F9C98C;
             transition: all 0.3s ease;
