--- a/src/scss/our-team.scss
+++ b/src/scss/our-team.scss
@@ -141,15 +141,15 @@
 
 .human {
    position: relative;
-   height: 550px;
-   border-radius: 40px;
+   height: 420px;
+   border-radius: 30px;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: end;
 
    @media (max-width:$tablet){
-    height: 470px;
+      height: 380px;
    }
 
    @media (max-width:$mobile){
@@ -177,9 +177,9 @@
    &__desc {
       z-index: 1;
       backdrop-filter: blur(25px);
-      border-radius: 0 0 40px 40px;
+      border-radius: 0 0 30px 30px;
       width: 100%;
-      padding: 30px 40px;
+      padding: 16px 40px 18px ;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -196,7 +196,7 @@
    // .human__name
    &__name {
     color: #fff;
-    @include adaptiveValue("font-size", 38, 20);
+    @include adaptiveValue("font-size", 30, 20);
     font-style: normal;
     font-family: "Gilroy",sans-serif;
     font-weight: 600;
