--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -33,7 +33,7 @@
         justify-content: space-between;
         margin-bottom: 20px;
 
-        @media (max-width:$mobile){
+        @media (max-width:$tablet){
              flex-wrap: wrap; 
         }
     }
@@ -65,6 +65,7 @@
         font-weight: 400;
         line-height: 1.6;
         padding-left: 1.4;
+        padding-left: 20px;
     }
 
     // .projects__list-item
@@ -82,7 +83,7 @@
     &__row {
         display: flex;
         flex-wrap: wrap;
-        gap: 30px;
+        gap: 24px;
         
         @media (max-width:$mobile){
              gap: 14px; 
@@ -92,10 +93,10 @@
 
     // .projects__col
     &__col {
-        width: calc(100% / 3 - 20px);
+        width: calc(100% / 3 - 16px);
 
         @media (max-width:$tablet){
-            width: calc(100% / 2 - 15px); 
+            width: calc(100% / 2 - 12px); 
         }
 
         @media (max-width:$mobile){
@@ -112,7 +113,7 @@
 .project {
     position: relative;
     border-radius: 40px;
-    height: 436px;
+    height: 380px;
     padding: 30px;
     display: flex;
     align-items: flex-end;
