--- a/src/scss/stages-work.scss
+++ b/src/scss/stages-work.scss
@@ -20,17 +20,14 @@
 }
 
 .stages {
-    padding: 106px 154px;
-    border-radius: 40px;
+    padding: 50px 42px;
+    border-radius: 30px;
     background: #1E1E1E;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
     justify-content: space-between;
 
-    @media (max-width: 1300px){
-        padding: 80px 50px;      
-    }
 
     @media (max-width:$tablet){
         padding: 40px 32px;
@@ -65,6 +62,7 @@
         align-items: center;
         gap: 30px;
         position: relative;
+        min-height: 104px;
 
         @media (max-width:$mobile){
              gap: 14px; 
@@ -74,20 +72,20 @@
     // .stages__number
     &__number {
         color: #f9c98c;
-        @include adaptiveValue("font-size", 100, 80);
+        @include adaptiveValue("font-size", 88, 70);
         font-family: "Jost",sans-serif;
         font-weight: 400;
         line-height: 0.9;
         letter-spacing: -2px;
-        min-width: 104px;
+        min-width: 94px;
 
         @media (max-width:$tablet){
-            min-width: 98px; 
+            min-width: 92px; 
             text-align: center;
         }
 
         @media (max-width:$mobile){
-            min-width: 94px; 
+            min-width: 84px; 
         }
     }
 
@@ -100,12 +98,12 @@
     // .stages__title
     &__title {
         color: #ddd;
-        @include adaptiveValue("font-size", 34, 18);
+        @include adaptiveValue("font-size", 30, 18);
         text-align: left;
         font-family: "Gilroy",sans-serif;
         font-weight: 500;
         letter-spacing: -1px;
-        margin-bottom: 20px;
+        margin-bottom: 18px;
 
         @media (max-width:$mobile){
              margin-bottom: 8px;
