--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -413,3 +413,20 @@
         @include adaptiveValue("max-width", 500, 400);
     }
 }
+
+.services-hero {
+    .hero__heading  {
+        height: 160px;
+
+        @media (max-width:$mobile){
+            height: auto;  
+        }
+    }
+
+    .hero__link {
+        bottom: unset;
+        right: -120px;
+        top: 10px;
+
+    }
+}
