--- a/src/scss/man_hour.scss
+++ b/src/scss/man_hour.scss
@@ -31,7 +31,7 @@
         display: flex;
         align-items: flex-start;
         flex-direction: column;
-        @include adaptiveValue("gap", 40, 20);
+        @include adaptiveValue("gap", 30, 16);
 
         @media (max-width:$mobile){
              flex: 1 1 auto; 
@@ -39,7 +39,7 @@
     }
 
     // .man_hour__text
-    &__text {
+    &__text, p {
         color: #373737;
         @include adaptiveValue("font-size", 18, 14);
         font-style: normal;
