--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -55,7 +55,7 @@
     @include adaptiveValue("font-size", 88, 26);
     font-style: normal;
     font-family: "Gilroy",sans-serif;
-    font-weight: 400;
+    font-weight: 100;
     line-height: 0.95;
     @include adaptiveValue("letter-spacing", -4, -1);
 
@@ -131,3 +131,125 @@
         }
     }
 }
+
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+
+    @media (max-width:$mobile){
+         gap: 16px; 
+    }
+
+    @media (max-width:$mobileSmall){
+         gap: 10px; 
+    }
+
+    &__prev,
+    &__next {
+        display: block;
+        background: #0A1537;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.3s ease;
+
+        &:hover {
+            background: #F9C98C;
+        }
+
+        &.disabled {
+            background: #8F8F8F;
+        }
+
+        @media (max-width:$mobileSmall){
+            width: 20px;
+            height: 20px; 
+            
+            svg {
+                width: 4.4px;
+                height: 8.4px;
+            }
+        }
+    }
+
+    // .pagination__prev
+    &__prev {
+    }
+
+    // .pagination__list
+    &__list {
+        display: flex;
+        gap: 10px;
+    }
+
+    // .pagination__item
+    &__item {
+
+        a {
+            color: #1e1e1e;
+            @include adaptiveValue("font-size", 32, 18);
+            font-style: normal;
+            font-family: "Gilroy",sans-serif;
+            font-weight: 400;
+            line-height: normal;
+            letter-spacing: -2px;
+            transition: all 0.3s ease;
+
+            &:hover {
+                color: #F9C98C;
+            }
+
+            @media (max-width:$mobile){
+                letter-spacing: -1px;  
+            }
+        }
+    }
+
+    // .pagination__next
+    &__next {
+    }
+}
+
+
+.custom-tab {
+
+    // .custom-tab__wrapp
+    &__wrapp {
+        max-width: 1100px;
+        margin: 0 auto;
+        padding: 0 16px;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        @include adaptiveValue("gap", 30, 12);
+    }
+
+    // .custom-tab__tab
+    &__tab {
+        color: #1e1e1e;
+        @include adaptiveValue("font-size", 18, 14);
+        font-style: normal;
+        text-align: center;
+        font-family: "Manrope",sans-serif;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: -1px;
+        padding: 6px 40px;
+        border: 1px solid #1E1E1E;
+        border-radius: 90px;
+        transition: all 0.3s ease-in;
+
+        &.active,
+        &:hover {
+            background: #0A1537;
+            color:#fff;
+        }
+    }
+}
+
